force-app/main/default/objects/Person__c/fields/Building_Numer__c.field-meta.xml
<CustomField>
    <fullName>Building_Numer__c</fullName>
    <label>Building Numer</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>