force-app/main/default/objects/Person__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Laryngologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>