force-app/main/default/objects/Person__c/validationRules/If_pesel_is_correct.validationRule-meta.xml
<ValidationRule>
    <fullName>If_pesel_is_correct</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(Personal_ID_Number__c , &quot;\\D&quot;) = TRUE ||   LEN(Personal_ID_Number__c )  &lt;&gt; 11 || VALUE(MID(Personal_ID_Number__c,5,2))&gt;31 ||( 
81&lt;=VALUE(MID(Personal_ID_Number__c,2,2)) &amp;&amp; VALUE(MID(Personal_ID_Number__c,2,2))&lt;= 92 )||

( 1&lt;=VALUE(MID(Personal_ID_Number__c,2,2)) &amp;&amp; VALUE(MID(Personal_ID_Number__c,2,2))&lt;= 12 &amp;&amp; 
ISBLANK( DATE(1900+VALUE(MID(Personal_ID_Number__c,1,2)) , VALUE(MID(Personal_ID_Number__c,3,2)) , VALUE(MID(Personal_ID_Number__c,5,2)) ))) ||

( 21&lt;=VALUE(MID(Personal_ID_Number__c,2,2)) &amp;&amp; VALUE(MID(Personal_ID_Number__c,2,2))&lt;= 32 &amp;&amp; 
ISBLANK( DATE(2000+VALUE(MID(Personal_ID_Number__c,1,2)) , VALUE(MID(Personal_ID_Number__c,3,2))-20 , VALUE(MID(Personal_ID_Number__c,5,2)) ))) ||

( 41&lt;=VALUE(MID(Personal_ID_Number__c,2,2)) &amp;&amp; VALUE(MID(Personal_ID_Number__c,2,2))&lt;= 52 &amp;&amp; 
ISBLANK( DATE(2100+VALUE(MID(Personal_ID_Number__c,1,2)) , VALUE(MID(Personal_ID_Number__c,3,2))-40 , VALUE(MID(Personal_ID_Number__c,5,2)) ))) ||

( 61&lt;=VALUE(MID(Personal_ID_Number__c,2,2)) &amp;&amp; VALUE(MID(Personal_ID_Number__c,2,2))&lt;= 72 &amp;&amp; 
ISBLANK( DATE(2200+VALUE(MID(Personal_ID_Number__c,1,2)) , VALUE(MID(Personal_ID_Number__c,3,2))-60 , VALUE(MID(Personal_ID_Number__c,5,2)) )))</errorConditionFormula>
    <errorDisplayField>Personal_ID_Number__c</errorDisplayField>
    <errorMessage>Personal ID is incorrect!</errorMessage>
</ValidationRule>